# cits3403-project

./: .flaskenv  .gitignore  .jsbeautifyrc  .pre-commit-config.yaml  .prettierrc  Procfile  README.md  akari3403.py  app.db  config.py  flask.side  microblog.py  mkdocs.yml  pyproject.toml  requirements.txt
Akari/: index.html  script.js  style.css
app/: __init__.py  cli.py  errors.py  forms.py  models.py  routes.py
app/api/: __init__.py  errors.py  routes.py  utils.py
app/auth/: forms.py  routes.py
app/errors/: handlers.py
app/main/: routes.py
app/static/: akari.css  akari.js  index.js  listeners.js  script.js  style.css
app/templates/: 404.html  base.html  index.html  leaderboard.html  login.html  register.html  statistics.html  user.html
app/templates/auth/: login.html  register.html
app/templates/errors/: 404.html  500.html
app/tests/: conftest.py  test_apis.py  test_cli.py  test_db.py  test_errors.py  test_main_routes.py  test_selenium.py  test_utils.py  testdb
docs/: developers.md  index.md
migrations/versions/: 02b0a11c7df1_.py  0cd9ea10401d_.py  1350101600fd_.py  2957102930f1_posts_table.py  65a261890ad1_add_association_object.py  8306f8b12ac4_add_streak_and_last.py  8e70ef911b1e_.py  b12fca87d56a_fix_associaiton_object.py  e011075e34a7_.py  ebd13043ac05_.py  f6bdad33df95_added_puzzle_table.py  f6e4fcc8e0f3_.py
